@startuml qmp_diagrama

class Prenda {
    Color colorPrimario
    Optional<Color> colorSecundario
}

class Tela

Prenda --> "1" Tela

enum Trama
enum Material

Tela --> "1" Trama
Tela --> "1" Material

enum TipoPrenda {
    CategoriaPrenda categoria
}

Prenda --> "1" TipoPrenda

enum CategoriaPrenda

TipoPrenda --> "1" CategoriaPrenda

class PrendaBuilder {
    TipoPrenda tipo
    Trama trama
    Material material
    Color colorPrimario
    Color colorSecundario
    tipo()
}

class PrendaSinTela {
    PrendaBuilder borrador
    tela()
}

PrendaBuilder ..> PrendaSinTela : tipo()

class PrendaSinColor {
    PrendaBorradorConTipo borrador
    colores()
}

PrendaSinTela ..> PrendaSinColor : tela()

class PrendaPreparada {
    PrendaBuilder borrador
    build()
}

PrendaSinColor ..> PrendaPreparada : colores()

PrendaPreparada ..> Prenda : build()

class Uniforme {
    Prenda superior
    Prenda inferior
    Prenda calzado
}

Uniforme --> "3" Prenda : tiene

abstract class UniformeFactory{
    crearUniforme()
    abstract crearPrendaSuperior()
    abstract crearPrendaInferior()
    abstract crearCalzado()
}

UniformeFactory ..> Uniforme : crea

@enduml